--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch src/jobs.json --port 8000"
+    "server": "json-server --watch src/jobs.json --port 8000",
+    "homepage": "https://rise-jonathan.github.io/react-job-project"
+
   },
   "dependencies": {
     "react": "^18.3.1",
